--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Homepage" />
 <meta property="og:description" content="Homepage" />
-<link rel="canonical" href="https://yuma_noritomo.github.io/" />
-<meta property="og:url" content="https://yuma_noritomo.github.io/" />
+<link rel="canonical" href="https://yuma-noritomo.github.io/" />
+<meta property="og:url" content="https://yuma-noritomo.github.io/" />
 <meta property="og:site_name" content="Yuma's website" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Home" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Yuma Noritomo"},"description":"Homepage","headline":"Home","name":"Yuma Noritomo personal website","url":"https://yuma_noritomo.github.io/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Yuma Noritomo"},"description":"Homepage","headline":"Home","name":"Yuma Noritomo personal website","url":"https://yuma-noritomo.github.io/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/main.css"><link type="application/atom+xml" rel="alternate" href="https://yuma_noritomo.github.io/feed.xml" title="Yuma Noritomo personal website" /></head>
+<link rel="stylesheet" href="/main.css"><link type="application/atom+xml" rel="alternate" href="https://yuma-noritomo.github.io/feed.xml" title="Yuma Noritomo personal website" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><!--a class="site-title" rel="author" href="/">Yuma Noritomo personal website</a--><nav class="site-nav">
@@ -32,7 +32,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
+        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/yuma-noritomo.github.io/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -65,7 +65,7 @@
 </style>
 
 <div class="flex">
-  <figure class="image"><img src="noritomo_ironman_image.JPG" alt="" /></figure>
+  <figure class="image"><img src="/yuma-noritomo.github.io/noritomo_ironman_image.JPG" alt="" /></figure>
   <div class="right">
     <p>
       I'm Yuma Noritomo, a PhD student at Dyson, Cornell, and an <i>IRONMAN</i> athlete.  <!--a , 
