--- a/Research/index.html
+++ b/Research/index.html
@@ -8,16 +8,16 @@
 <meta property="og:title" content="Research" />
 <meta name="author" content="Yuma Noritomo" />
 <meta property="og:locale" content="en_US" />
-<link rel="canonical" href="https://yuma_noritomo.github.io/research/" />
-<meta property="og:url" content="https://yuma_noritomo.github.io/research/" />
+<link rel="canonical" href="https://yuma-noritomo.github.io/research/" />
+<meta property="og:url" content="https://yuma-noritomo.github.io/research/" />
 <meta property="og:site_name" content="Yuma Noritomo personal website" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Research" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Yuma Noritomo"},"headline":"Research","url":"https://yuma_noritomo.github.io/research/"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Yuma Noritomo"},"headline":"Research","url":"https://yuma-noritomo.github.io/research/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/main.css"><link type="application/atom+xml" rel="alternate" href="https://yuma_noritomo.github.io/feed.xml" title="Yuma Noritomo personal website" /></head>
+<link rel="stylesheet" href="/main.css"><link type="application/atom+xml" rel="alternate" href="https://yuma-noritomo.github.io/feed.xml" title="Yuma Noritomo personal website" /></head>
 <body><header class="site-header" role="banner">
 
   <div class="wrapper"><!--a class="site-title" rel="author" href="/">Yuma Noritomo personal website</a--><nav class="site-nav">
@@ -30,7 +30,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
+        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/yuma-noritomo.github.io/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
