--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/yuma-noritomo.github.io/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
+        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
@@ -65,7 +65,7 @@
 </style>
 
 <div class="flex">
-  <figure class="image"><img src="/yuma-noritomo.github.io/noritomo_ironman_image.JPG" alt="" /></figure>
+  <figure class="image"><img src="/noritomo_ironman_image.jpg" alt="" /></figure>
   <div class="right">
     <p>
       I'm Yuma Noritomo, a PhD student at Dyson, Cornell, and an <i>IRONMAN</i> athlete.  <!--a , 
