--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="/research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
+        <div class="trigger"><a class="page-link" href="/">Home</a><a class="page-link" href="Research/">Research</a><!--a class="page-link" href="/teaching/">Teaching</a--></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
