--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Home" />
+<meta name="google-site-verification" content="HAWkrfcgXcT6lCTjyLtuNqOl8X7qkjrtykacFEUTzWU" />
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"Yuma Noritomo"},"description":"Homepage","headline":"Home","name":"Yuma Noritomo personal website","url":"https://yuma-noritomo.github.io/"}</script>
 <!-- End Jekyll SEO tag -->
