--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 "name":"Yuma Noritomo"
             },
             "description":"Homepage",
-            "headline":"Home",
-            "name":"Yuma Noritomo personal website",
+            "headline":"Yuma's website",
+            "name":"Yuma's' website",
             "url":"https://yuma-noritomo.github.io/"
         }
     </script>
