--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 "@type":"Person",
                 "name":"Yuma Noritomo"
             },
-            "description":"Homepage",
+            "description":"Yuma's website",
             "headline":"Yuma's website",
             "name":"Yuma's' website",
             "url":"https://yuma-noritomo.github.io/"
