--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
     <meta name="author" content="Yuma Noritomo">
     <meta name="description" content="Homepage">
     <meta name="google-site-verification" content="HAWkrfcgXcT6lCTjyLtuNqOl8X7qkjrtykacFEUTzWU">
-    <meta name="twitter:card" content="summary">
     
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Yuma's website">
     <meta property="og:locale" content="en_US">
-    <meta property="og:description" content="Homepage">
+    <meta property="og:description" content="Yuma's website">
     <meta property="og:url" content="https://yuma-noritomo.github.io/">
     <meta property="og:site_name" content="Yuma's website">
     <meta property="og:type" content="website">
