--- a/Research/index.html
+++ b/Research/index.html
@@ -70,7 +70,7 @@
                     <h4 id="publication">Publication</h4>
                     <ul>
                         <li>Yuma Noritomo and Kazushi Takahashi (2020). <a href="https://www.tandfonline.com/doi/full/10.1080/00220388.2020.1736281"><font color="blue">Can insurance payouts prevent a poverty trap? Evidence from randomised experiments in northern Kenya</font></a>, <i>The Journal of Development Studies</i>, 56(11), 2079-2096.</li>
-                        <li>Kazushi Takahashi, Yuma Noritomo, Munenobu Ikegami, and Nathaniel D. Jensen (2020). <a href="https://www.sciencedirect.com/science/article/pii/S0167629621000734?via%3Dihub"><font color="blue">Understanding pastoralists' dynamic insurance uptake decisions: Evidence from four-year panel data in Ethiopia</font></a>, <i>Food Policy</i>, 95, 101910.</li>
+                        <li>Kazushi Takahashi, Yuma Noritomo, Munenobu Ikegami, and Nathaniel D. Jensen (2020). <a href="https://www.sciencedirect.com/science/article/pii/S0306919220301147"><font color="blue">Understanding pastoralists' dynamic insurance uptake decisions: Evidence from four-year panel data in Ethiopia</font></a>, <i>Food Policy</i>, 95, 101910.</li>
                     </ul>
                 </div>
             </article>
