--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img src="/noritomo_ironman_image.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete and a PhD student at Dyson, Cornell.</p>
+                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete and a PhD student at Dyson, Cornell, co-founder of <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics study group base in Japan</font></a>.</p>
                     <p>My focus is on identifying ways to break poverty traps.</p>
                 </div>
             </div>
