--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     display: flex; 
                 }
                 .flex .image {
-                    width: 90px;
+                    width: 100px;
                     margin: 0;
                     padding: 0;
                     overflow: hidden;
@@ -99,8 +99,8 @@
                     <img src="/noritomo_ironman_image.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete and a PhD student at Dyson, Cornell, co-founder of <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics study group base in Japan</font></a>.</p>
-                    <p>My focus is on identifying ways to break poverty traps.</p>
+                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete, PhD student at Dyson, Cornell, and co-founder of the <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a> in Japan.</p>
+                    <p>I research strategies to break poverty traps.</p>
                 </div>
             </div>
         </div>
