--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img src="/noritomo_ironman_image.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete, PhD student at Dyson, Cornell. </p>
+                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete and a PhD student at Dyson, Cornell.</p>
                     <p>I research strategies to break poverty traps.</p>
                 </div>
             </div>
