--- a/Research/index.html
+++ b/Research/index.html
@@ -64,7 +64,7 @@
                     <ul>
                         <li>Yuma Noritomo and Yoshito Takasaki. <strong>Research site selection bias: lessons from a natural experiment in the Peruvian Amazon.</strong></li>
                         <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, and Hyuk Harry Son. <strong>Long-run effects of catastrophic drought insurance.</strong></li>
-                        <li>Yuma Noritomo and Hiroto Sato. <strong>Breaking Intergenerational Poverty Traps: Spatial Re-allocation in Post-Disaster Settings.</strong></li>
+                        <li>Yuma Noritomo and Hiroto Sato. <strong>Migration and human capital investment. </strong></li>
                         <!--
                         <li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>
                         <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne <strong> Impact of Restricting Mothers’ International Migration
