work in progress tab
work in progress tab

--- a/Research/index.html
+++ b/Research/index.html
@@ -61,6 +61,7 @@
                     <ul>
                         <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, and Hyuk Harry Son. <a href="https://hyukhson.github.io/files/Son_JMP_Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a></li>
                     </ul>
+                    <h4 id="working in Progress">Work in Progress</h4>
                     <ul>
                         <li>Yuma Noritomo and Yoshito Takasaki. <strong>Research site selection bias: lessons from a natural experiment in the Peruvian Amazon.</strong></li>
                         <li>Yuma Noritomo and Hiroto Sato. <strong>Migration and human capital investment. </strong></li>
