--- a/index.html
+++ b/index.html
@@ -99,8 +99,11 @@
                     <img src="/noritomo_ironman_image.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p>I'm Yuma Noritomo, an <i>IRONMAN</i> athlete and a PhD student at Dyson, Cornell.</p>
-                    <p>I research strategies to break poverty traps.</p>
+                    <p>I'm Yuma Noritomo, </p>
+                    <ul>
+                        <li> an <i>IRONMAN</i> athlete</li>
+                        <li> a PhD student at Dyson, Cornell.</li>
+                    </ul>
                 </div>
             </div>
         </div>
