--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 <div class="right">
                     <p>I'm Yuma Noritomo, </p>
                     <ul>
-                        <li> an <i>IRONMAN</i> athlete</li>
+                        <li> an <i>IRONMAN</i> 🏊🚴🏃 athlete</li>
                         <li> a PhD student at Dyson, Cornell.</li>
                     </ul>
                 </div>
