--- a/Research/index.html
+++ b/Research/index.html
@@ -82,7 +82,7 @@
                     </ul>
                 </div>
             </article>
-            Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a> (co-founder) </p>
+            Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a> (co-founder), Chris Barrett Reserach Group </p>
         </div>
     </main>
 </body>
