--- a/index.html
+++ b/index.html
@@ -99,11 +99,7 @@
                     <img src="/noritomo_ironman_image.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p>I'm Yuma Noritomo (yn266), </p>
-                    <ul>
-                        <li> an <i>IRONMAN</i> 🏊🚴🏃 athlete</li>
-                        <li> a PhD student at Dyson, Cornell.</li>
-                    </ul>
+                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell, and an <i>IRONMAN</i> 🏊🚴🏃 </p>
                 </div>
             </div>
         </div>
