--- a/Research/index.html
+++ b/Research/index.html
@@ -67,9 +67,9 @@
                     <h4 id="working in Progress">Work in Progress</h4>
                     <ul>
                         <li>Yuma Noritomo and Yoshito Takasaki. <strong>Research site selection bias: lessons from a natural experiment in the Peruvian Amazon.</strong></li>
-                        <li>Yuma Noritomo. <strong>Timing of droughts on long-run educational attainment. </strong></li>
-                        <li>Yuma Noritomo and Hiroto Sato. <strong>Migration and human capital investment. </strong></li>
-                        <!--
+                        <li>Yuma Noritomo. <strong>Timing of droughts on educational attainment. </strong></li>
+                        <!--<li>Yuma Noritomo and Hiroto Sato. <strong>Migration and human capital investment. </strong></li>
+                        
                         <li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>
                         <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne <strong> Impact of Restricting Mothers’ International Migration
                             on Left Behind Children </strong></li>
@@ -83,7 +83,7 @@
                     </ul>
                 </div>
             </article>
-            📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a> (co-founder), Chris Barrett Reserach Group </p>
+            📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a>, Chris Barrett Reserach Group </p>
         </div>
     </main>
 </body>
