highlight my 2nd year paper
highlight my 2nd year paper

--- a/Research/index.html
+++ b/Research/index.html
@@ -66,8 +66,8 @@
                     </ul>
                     <h4 id="working in Progress">Work in Progress</h4>
                     <ul>
+                        <li>Yuma Noritomo. <strong>Does the timing of droughts over the course of life affect educational attainment? </strong></li>
                         <li>Yuma Noritomo and Yoshito Takasaki. <strong>Research site selection bias: lessons from a natural experiment in the Peruvian Amazon.</strong></li>
-                        <li>Yuma Noritomo. <strong>Does the Timing of droughts over the course of life affect educational attainment? </strong></li>
                         <li>Yuma Noritomo and Hiroto Sato. <strong>Migration and human capital investment. </strong></li>
                         <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>
                         <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne <strong> Impact of Restricting Mothers’ International Migration
