--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img src="/noritomo_ironman_image.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell, and an <i>IRONMAN</i> 🏊🚴🏃 </p>
+                    <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃, and a PhD student at Dyson, Cornell </p>
                 </div>
             </div>
         </div>
