--- a/Research/index.html
+++ b/Research/index.html
@@ -62,12 +62,13 @@
                     <p style="margin-bottom: 20px;">
                     <h4 id="working-paper">Working Paper</h4>
                     <ul>
-                        <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, and Hyuk Harry Son. <a href="https://hyukhson.github.io/files/Son_JMP_Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a></li>
+                        <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Son_JMP_Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a></li>
                     </ul>
                     <h4 id="working in Progress">Work in Progress</h4>
                     <ul>
                         <li>Yuma Noritomo. <strong> Does the timing of productivity shocks in childhood affect educational attainment? </strong></li>
                         <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
+                        <!--<li> Karlijn Morsink and Yuma Noritomo. <strong> Investment in human capital vs. productive assets: Perceived beliefs and realized behaviors under the provision of insurance. </strong></li>
                         <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
                         <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>
                         <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne <strong> Impact of Restricting Mothers’ International Migration
@@ -82,7 +83,7 @@
                     </ul>
                 </div>
             </article>
-            📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a>, Chris Barrett Reserach Group </p>
+            📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a>, Chris Barrett Reserach Group @Cornell, and TAKAHASHI seminar@GRIPS </p>
         </div>
     </main>
 </body>
