--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </style>
             <div class="flex">
                 <figure class="image">
-                    <img src="/noritomo_ironman_image.jpg" alt="">
+                    <img src="/IMG_0955.jpg" alt="">
                 </figure>
                 <div class="right">
                     <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃, and a PhD student at Dyson, Cornell </p>
