--- a/Research/index.html
+++ b/Research/index.html
@@ -83,7 +83,7 @@
                     </ul>
                 </div>
             </article>
-            📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a>, Chris Barrett Reserach Group @Cornell, and TAKAHASHI seminar@GRIPS </p>
+            📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a>, Chris Barrett Reserach Group@Cornell, TAKAHASHI seminar@GRIPS, and <a href="https://www.pnas.org/journal-club/journal-club-panelists"><font color="blue">PNAS journal club panelist</font></a> </p>
         </div>
     </main>
 </body>
