--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <img src="/IMG_0955.jpg" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃, and a PhD student at Dyson, Cornell </p>
+                    <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃 and a PhD student at Dyson, Cornell. Currently, I'm visiting the Development Research Group at PSE for Fall 2024. </p>
                 </div>
             </div>
         </div>
