--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             </style>
             <div class="flex">
                 <figure class="image">
-                    <img src="/noritomo_versallie.jpg" alt="">
+                    <img src="/noritomo_versallie.jpeg" alt="">
                 </figure>
                 <div class="right">
                     <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃 and a PhD student at Dyson, Cornell. Currently, I'm visiting the Development Research Group at PSE for Fall 2024. </p>
