--- a/Research/index.html
+++ b/Research/index.html
@@ -66,7 +66,7 @@
                     </ul>
                     <h4 id="working in Progress">Work in Progress</h4>
                     <ul>
-                        <li>Yuma Noritomo. <strong> Does the timing of productivity shocks in childhood affect educational attainment? </strong> Scheduled to present at NEUDC2024 </li>
+                        <li>Yuma Noritomo. <strong> Does the timing of productivity shocks in childhood affect educational attainment? </strong> Scheduled to present at NEUDC2024, EWMES2024 </li>
                         <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne <strong> Restricting mothers’ international migration
                             and child health and education </strong></li>
                         <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
