--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img src="/noritomo_versallie.jpeg" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃 and a PhD student at Dyson, Cornell. Currently, I'm visiting the Development Research Group at PSE. </p>
+                    <p> I'm Yuma Noritomo, an <i>IRONMAN</i> 🏊🚴🏃 and a PhD student at Dyson, Cornell. Currently, I'm visiting the Development Research Group at PSE. e-mail: yn266[at]cornell.edu </p>
                     <p> I research strategies to break poverty traps through the accumulation of human capital. </p>                        
                 </div>
             </div>
