--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                         <p> </p>
                         <h4 id="working-paper-work-in-progress">Working Paper / Work in Progress</h4>
                         <ul>
-                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> Presentation: UNU-WIDER2025</li>
+                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i>  Presentation at UNU-WIDER2025</li>
                             <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> Presentation at <span style="text-decoration: line-through;">PSE, Utrecht, NEUDC2024, The 19th Applied Econometrics Conference</span>, EWMES2024, CSAE2025</li>
-                            <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and child health and education. </strong></li>
+                            <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and child health and education. Presentation at ADEA-QUT (by Takuya) </strong></li>
                             <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
                             <!--<li> Karlijn Morsink and Yuma Noritomo. <strong> Investment in human capital vs. productive assets: Perceived beliefs and realized behaviors under the provision of insurance. </strong></li>
                             <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
