--- a/Research/index.html
+++ b/Research/index.html
@@ -67,7 +67,7 @@
                     <h4 id="working in Progress">Work in Progress</h4>
                     <ul>
                         <li>Yuma Noritomo. <strong> Does the timing of productivity shocks in childhood affect educational attainment? </strong> Scheduled to present at NEUDC2024, EWMES2024, CSAE2025 </li>
-                        <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and child health and education. </strong></li>
+                        <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and child development. </strong></li>
                         <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
                         <!--<li> Karlijn Morsink and Yuma Noritomo. <strong> Investment in human capital vs. productive assets: Perceived beliefs and realized behaviors under the provision of insurance. </strong></li>
                         <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
