--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
                         <p> </p>
                         <h4 id="working-paper-work-in-progress">Working Paper / Work in Progress</h4>
                         <ul>
-                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> </li>
-                            <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> </li>
+                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> [Scheduled presentation: UNU-WIDER2025] </li>
+                            <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Scheduled presentation: CSAE2025] </li>
                             <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and human capital investment. </strong> </li>
                             <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
                             <li> Karlijn Morsink and Yuma Noritomo. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
