--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <img src="/noritomo_versallie.jpeg" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, an <i>IRONMAN</i> athelete 🏊🚴🏃 and a PhD student at Dyson, Cornell. e-mail: yn266[at]cornell.edu </p>
+                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. e-mail: yn266[at]cornell.edu </p>
                     <p> I research strategies to reduce chronic poverty through the accumulation of human capital. </p>                        
                 </div>
             </div>
@@ -108,14 +108,13 @@
                         <p> </p>
                         <h4 id="working-paper-work-in-progress">Working Paper / Work in Progress</h4>
                         <ul>
-                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> [Scheduled presentation: UNU-WIDER2025] </li>
-                            <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Scheduled presentation: CSAE2025] </li>
+                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> [Scheduled presentation: Kyoto, UNU-WIDER2025] </li>
+                            <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Scheduled presentation: JADE, CSAE, Wageningen] </li>
                             <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and human capital investment. </strong> </li>
-                            <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
                             <li> Karlijn Morsink and Yuma Noritomo. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
+                            <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
                             <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
-                            <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>
-                            
+                            <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>   
                             -->
                         </ul>
                 
@@ -126,8 +125,8 @@
                         </ul>
                     </div>
                 </article>
-                <!--📝Study Group: <a href="https://sites.google.com/view/dmsg-utokyo/honbu?authuser=0"><font color="blue">Development Micro-econometrics Study Group</font></a>, Chris Barrett Reserach Group@Cornell, TAKAHASHI seminar@GRIPS, <a href="https://www.pnas.org/journal-club/journal-club-panelists"><font color="blue">PNAS journal club panelist</font></a>, PSE Development Research Group </p>
-                                   -->
+                📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club panelist</font></a> </p>
+                🏊🚴🏃 and a passionate <i>IRONMAN</i> athelete
             </div>
         </main>
 </body>
