--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                         <p> </p>
                         <h4 id="working-paper-work-in-progress">Working Paper / Work in Progress</h4>
                         <ul>
-                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> [Scheduled presentation: Kyoto, UNU-WIDER2025] </li>
+                            <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> [Scheduled presentation: Kyoto, UNU-WIDER] </li>
                             <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Scheduled presentation: JADE, CSAE, Wageningen] </li>
                             <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and human capital investment. </strong> </li>
                             <li> Karlijn Morsink and Yuma Noritomo. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
@@ -126,7 +126,7 @@
                     </div>
                 </article>
                 📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club panelist</font></a> </p>
-                🏊🚴🏃 and a passionate <i>IRONMAN</i> athelete
+                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete
             </div>
         </main>
 </body>
