--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     display: flex; 
                 }
                 .flex .image {
-                    width: 200px;
+                    width: 180px;
                     margin: 0;
                     padding: 0;
                     overflow: hidden;
@@ -94,7 +94,7 @@
             </style>
             <div class="flex">
                 <figure class="image">
-                    <img src="/noritomo_versallie.jpeg" alt="">
+                    <img src="/Noritomo_Ams.JPG" alt="">
                 </figure>
                 <div class="right">
                     <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. e-mail: yn266[at]cornell.edu </p>
@@ -125,7 +125,7 @@
                         </ul>
                     </div>
                 </article>
-                📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club panelist</font></a> </p>
+                📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club</font></a> </p>
                 🏊🚴🏃 A passionate <i>IRONMAN</i> athelete
             </div>
         </main>
