--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
                     <img src="/Noritomo_Ams.JPG" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. e-mail: yn266[at]cornell.edu </p>
-                    <p> I research strategies to reduce chronic poverty through the accumulation of human capital. </p>                        
+                    <p> I'm Yuma Noritomo, a PhD student at the Dyson School, Cornell University. I visited PSE in Fall 2024. e-mail: yn266[at]cornell.edu </p>
+                    <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation. </p>                        
                 </div>
             </div>
         </div>
@@ -111,7 +111,7 @@
                             <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://hyukhson.github.io/files/Long_run_Effects_of_Catastrophic_Drought_Insurance.pdf">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a> <i>Submitted</i> [Scheduled presentation: Kyoto, UNU-WIDER] </li>
                             <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Scheduled presentation: JADE, CSAE, Wageningen] </li>
                             <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and human capital investment. </strong> </li>
-                            <li> Karlijn Morsink and Yuma Noritomo. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
+                            <li>Karlijn Morsink and Yuma Noritomo. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
                             <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li>
                             <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
                             <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>   
