--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                             <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://www.dropbox.com/scl/fi/nykh5bstdjtm1epwzi6vd/IBLI_Long-term_Barrett_et_al_2025March.pdf?rlkey=4yltzxx80e36lzbcpace8c1rx&st=4z3xsrn1&dl=0">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a>  [Cornell, UNU-WIDER] <i>Submitted</i> </li>
                             <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <strong> Restricting mothers’ international migration and human capital investment. </strong> [AEDC] </li>
                             <li>Yuma Noritomo and Karlijn Morsink. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
-                            <li>Jensen et al. <strong> Index-based livestock insurance to support pastoralists against droughts.</strong>  <i>Submitted</i></li>
+                            <li>Jensen et al. <strong> Index-based livestock insurance to support pastoralists against droughts.</strong>  <i>R&R at Food Policy</i></li>
                             <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li> 
                             <!--<li>Yuma Noritomo and Hiroto Sato. <strong> Migration and human capital investment. </strong></li> -->
                             <!--<li>Yoshito Takasaki, Yuma Noritomo, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias in the assessment of rural livelihoods, poverty and inequality</strong></li>   
