full name of confefrence

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                         <p> </p>
                         <h4 id="working-paper-work-in-progress">Working Paper / Work in Progress [Scheduled presentation]</h4>
                         <ul>
-                            <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Kobe, Wageningen, ES World Congress]  <i>Kanematsu Award</i> </li>
+                            <li>Yuma Noritomo. <strong>Does the timing of productivity shocks in childhood affect educational attainment?</strong> [Kobe, Wageningen, Eeonometric Society World Congress]  <i>Kanematsu Award</i> </li>
                             <li>Christopher Barrett, Nathan Jensen, Karlijn Morsink, Yuma Noritomo, Hyuk Harry Son, Rupsha Banerjee, and Nils Teufel. <a href="https://www.dropbox.com/scl/fi/nykh5bstdjtm1epwzi6vd/IBLI_Long-term_Barrett_et_al_2025March.pdf?rlkey=4yltzxx80e36lzbcpace8c1rx&st=4z3xsrn1&dl=0">Long-run effects of catastrophic drought insurance.<font color="blue"></font></a>  [Cornell, UNU-WIDER] <i>Submitted</i> </li>
-                            <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.<font color="blue"></font></a> [AEDC] <i>Submitted</i> </li>
+                            <li>Takuya Hasebe, Yuma Noritomo, and Bilesha Weeraratne. <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5220631">Restricting mothers' international migration and human capital investment.<font color="blue"></font></a> [Asian Economic Development Conference] <i>Submitted</i> </li>
                             <li>Yuma Noritomo and Karlijn Morsink. <strong> Trading off  human capital versus productive asset investment: perceptions of risk and return. </strong></li>
                             <li>Jensen et al. <strong> Index-based livestock insurance to support pastoralists against droughts.</strong>  <i>R&R at Food Policy</i></li>
                             <li>Yuma Noritomo, Yoshito Takasaki, Oliver Coomes, and Christian Abizaid. <strong> Research site selection bias. </strong></li> 
