--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     </div>
                 </article>
                 📝 I have been contributing to <a href="https://x.com/dmeconsg"><font color="blue">Development Micro-econometrics Study Group</font></a> (Japanese), <a href="https://www.pnas.org/journal-club"><font color="blue">PNAS journal club</font></a> </p>
-                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete
+                🏊🚴🏃 A passionate <i>IRONMAN</i> athelete, racing in Frankfurt this year, and a proud finisher of Mont-Tremblant and Vitoria-Gasteiz.
             </div>
         </main>
 </body>
