--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
                     <img src="/Noritomo_Ams.JPG" alt="">
                 </figure>
                 <div class="right">
-                    <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024. e-mail: yn266[at]cornell.edu </p>
+                    <p> ChatGPT:
+I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I earned an M.A. in Economics from the University of Tokyo in 2022 and visited PSE in Fall 2024. e-mail: yn266[at]cornell.edu </p>
                     <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation. </p>                        
                 </div>
             </div>
