in developing countries
in developing countries

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 </figure>
                 <div class="right">
                     <p> I'm Yuma Noritomo, a PhD student at Dyson, Cornell. I visited PSE in Fall 2024. e-mail: yn266[at]cornell.edu </p>
-                    <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation. </p>                        
+                    <p> My research focuses on strategies to reduce chronic poverty through human capital accumulation in developing countries. </p>                        
                 </div>
             </div>
         </div>
